--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "description": "A foundation for scalable desktop apps",
+  "description": "The Lily client application",
   "keywords": [
     "electron",
     "boilerplate",
@@ -11,25 +11,25 @@
     "hot",
     "reload"
   ],
-  "homepage": "https://github.com/electron-react-boilerplate/electron-react-boilerplate#readme",
+  "homepage": "https://github.com/cubeflix/lily-app#readme",
   "bugs": {
-    "url": "https://github.com/electron-react-boilerplate/electron-react-boilerplate/issues"
+    "url": "https://github.com/cubeflix/lily-app/issues"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/electron-react-boilerplate/electron-react-boilerplate.git"
+    "url": "git+https://github.com/cubeflix/lily-app.git"
   },
   "license": "MIT",
   "author": {
-    "name": "Electron React Boilerplate Maintainers",
-    "email": "electronreactboilerplate@gmail.com",
-    "url": "https://electron-react-boilerplate.js.org"
+    "name": "cubeflix",
+    "email": "kevin.signal@gmail.com",
+    "url": "https://github.com/cubeflix"
   },
   "contributors": [
     {
-      "name": "Amila Welihinda",
-      "email": "amilajack@gmail.com",
-      "url": "https://github.com/amilajack"
+      "name": "Kevin Chen",
+      "email": "kevin.signal@gmail.com",
+      "url": "https://github.com/cubeflix"
     }
   ],
   "main": "./src/main/main.ts",
@@ -192,8 +192,8 @@
     "webpack-merge": "^5.8.0"
   },
   "build": {
-    "productName": "ElectronReact",
-    "appId": "org.erb.ElectronReact",
+    "productName": "Lily",
+    "appId": "org.cubeflix.lily-app",
     "asar": true,
     "asarUnpack": "**\\*.{node,dll}",
     "files": [
@@ -251,8 +251,8 @@
     ],
     "publish": {
       "provider": "github",
-      "owner": "electron-react-boilerplate",
-      "repo": "electron-react-boilerplate"
+      "owner": "cubeflix",
+      "repo": "lily-app"
     }
   },
   "collective": {
